Fix path to tiles

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ void main() {
       })
     }, {}).addTo(map);
 
-    var layer = L.tileLayer.glue("/{z}/{x}/{y}.png", {
+    var layer = L.tileLayer.glue("./{z}/{x}/{y}.png", {
       attribution: "<a href='https://mycityconstruction.jp/products/5251'>平成30年度[30-K3252-01号]二級河川太田川河川改良工事に伴う測量業務委託（航空レーザー測量）【13-01】</a> を加工して作成",
       maxNativeZoom: 19,
       maxZoom: 20,
